--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -8,12 +8,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <link href="/app.c724046a9afea044787e.css" rel="stylesheet"></head>
+    <link href="app.c724046a9afea044787e.css" rel="stylesheet"></head>
   <body>
     <reputation-platform>Loading...</reputation-platform>
-    <script type="text/javascript" src="/polyfills.c724046a9afea044787e.js"></script>
-    <script type="text/javascript" src="/vendor.c724046a9afea044787e.js"></script>
-    <script type="text/javascript" src="/app.c724046a9afea044787e.js"></script>
+    <script type="text/javascript" src="polyfills.c724046a9afea044787e.js"></script>
+    <script type="text/javascript" src="vendor.c724046a9afea044787e.js"></script>
+    <script type="text/javascript" src="app.c724046a9afea044787e.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
