Android js/index.js fix

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -10,6 +10,14 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link href="app.c724046a9afea044787e.css" rel="stylesheet"></head>
   <body>
+
+        <div class="app" style="display:none">
+            <h1>Apache Cordova</h1>
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+        </div>
     <reputation-platform>Loading...</reputation-platform>
     <script type="text/javascript" src="polyfills.c724046a9afea044787e.js"></script>
     <script type="text/javascript" src="vendor.c724046a9afea044787e.js"></script>
