--- a/static/web/src/index.html
+++ b/static/web/src/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base href="/">
-    <title>@tlas</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>@atlas</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-    <attlas-platform>Loading...</attlas-platform>
+    <app-root>Loading ...</app-root>
   </body>
 </html>
